<resources>
    <string name="app_name">WorkReminder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_title">Work Title</string>
    <string name="add_category">Category</string>
    <string name="add_date">Date</string>
    <string name="add_ok">OK</string>
    <string name="add_cancel">CANCEL</string>
    <string name="calendar_date_picker_result_values">%1$s/%2$s/%3$s</string>
    <string name="add_time">Time</string>
    <string name="calendar_time_picker_result_values">%1$s : %2$s</string>
    <string name="works">Works</string>
    <string name="repeat">Repeat</string>

</resources>

